--- a/src/templates/screens/QueryList.vm
+++ b/src/templates/screens/QueryList.vm
@@ -3,6 +3,20 @@
 #set ($module = $scarabR.CurrentModule)
 #set ($user = $data.User)
 
+<h2>Saved query list</h2>
+
+#if (!$user.UserId)
+   If you wish to see your personal queries or to edit your subscriptions to a query, <a href="$link.setPage("Login.vm")">log in.</a>
+   #if ( $module.GlobalQueries.isEmpty() )
+     #set ($noQueries = "true")
+   #end
+#elseif ( ($module.getPrivateQueries($user).isEmpty()) && ($module.GlobalQueries.isEmpty())) 
+   #set ($noQueries = "true")
+#end
+
+#if ($noQueries.equals("true"))
+    <div class="alert">There are no stored queries.</div>
+#else
 
 <form method="post" action="$action" >
 #if ($user.UserId)
@@ -18,7 +32,7 @@
 
 </tr>
 <tr>
-<td><input type="submit" value="save" class="bttn" name="eventSubmit_doSavefrequencies" />&nbsp;<input type="submit" value="cancel" class="bttn" name="eventSubmit_doCancel" />&nbsp;<input type="submit" value="new" class="bttn" name="eventSubmit_doNewquery" /></td>                       
+<td>hi <input type="submit" value="save" class="bttn" name="eventSubmit_doSavefrequencies" />&nbsp;<input type="submit" value="cancel" class="bttn" name="eventSubmit_doCancel" />&nbsp;<input type="submit" value="new" class="bttn" name="eventSubmit_doNewquery" /></td>                       
 
 <td><input type="submit" value="copy" class="bttn" name="eventSubmit_doCopyquery" />&nbsp;
    #if ($security.hasPermission("Item | Delete") || !$module.getPrivateQueries($user).isEmpty())
@@ -30,20 +44,6 @@
 
 
 
-<h2>Saved query list</h2>
-
-#if (!$user.UserId)
-   If you wish to see your personal queries or to edit your subscriptions to a query, <a href="$link.setPage("Login.vm")">log in.</a>
-   #if ( $module.GlobalQueries.isEmpty() )
-     #set ($noQueries = "true")
-   #end
-#elseif ( ($module.getPrivateQueries($user).isEmpty()) && ($module.GlobalQueries.isEmpty())) 
-   #set ($noQueries = "true")
-#end
-
-#if ($noQueries.equals("true"))
-    <div class="alert">There are no stored queries.</div>
-#else
 
 ##      <p>&#171; previous | 1 of 1 | next &#187; </p>
 
@@ -146,6 +146,6 @@
       </div>
      </td>
     </tr>
-   </table>
 #end
+   </table>
   </form>
