report screens in progress.  nothing working yet.
intake was modified, so fulcrum was updated.

Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -181,3 +181,7 @@ value="false" />
 #macro ( datatitle $title )
 <h3>$title</h3>
 #end
+
+#macro ( trclass $count )
+  #if( $count % 2 > 0 )class="a"#else class="b"#end
+#end
