--- a/src/templates/screens/reports/Step3_1b.vm
+++ b/src/templates/screens/reports/Step3_1b.vm
@@ -1,3 +1,7 @@
+#set ( $report = $scarabR.Report )
+#set ( $intakeReport = $intake.Report.mapTo($report) )
+#set ( $action = $link.setPage("reports,Step3_1b.vm").setAction("GenerateReport").addPathInfo("nextTemplate", "reports,Report_1.vm") )
+
 <div class="app" id="div2-4-1-step5">
 
 <h2>Define report (2.4.1)</h2>
@@ -29,7 +33,7 @@
 			<select name="$intakeReport.Axis1AttributesAndOptions.Key" 
                 multiple="multiple" size="15">
 
-                #attributeOptionOptionList( $report.getAxis1SelectOptions($module) )
+                #attributeOptionOptionList( $report.getOptionsMinusFilters($module) )
 			</select>
 			</td>
 		</tr>
@@ -40,7 +44,7 @@
 			<select name="$intakeReport.Axis2AttributesAndOptions.Key" 
                 multiple="multiple" size="15">
 
-                #attributeOptionOptionList( $report.getAxis2SelectOptions($module) )
+                #attributeOptionOptionList( $report.getOptionsMinusFilters($module) )
 			</select>
 			</td>
 		</tr>
